WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
12079
Nested tables don't repaint properly when a certain row is added
https://bugs.webkit.org/show_bug.cgi?id=12079
Summary
Nested tables don't repaint properly when a certain row is added
Adele Peterson
Reported
2007-01-02 12:03:02 PST
<
rdar://problem/4584389
> REGRESSION: Nested tables don't repaint properly when a certain row is added
Attachments
test case
(1.31 KB, text/html)
2007-01-02 12:04 PST
,
Adele Peterson
no flags
Details
Slight reduction
(655 bytes, text/html)
2007-01-02 13:34 PST
,
mitz
no flags
Details
Fix table section repainting and table overflows
(73.58 KB, patch)
2007-01-05 12:13 PST
,
mitz
hyatt
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Adele Peterson
Comment 1
2007-01-02 12:04:54 PST
Created
attachment 12170
[details]
test case Follow the instructions in the attached test case to add a new row to one of the inner tables. The next inner table will then fail to repaint properly.
mitz
Comment 2
2007-01-02 13:34:41 PST
Created
attachment 12173
[details]
Slight reduction Any content in the first table section will do. This is a regression from the fix for
bug 5633
.
mitz
Comment 3
2007-01-02 16:46:15 PST
This bug is a RenderTable version of
bug 3509
, and a similar fix should work. Sections that moved (vertically, in this case) after layout should be repainted at their new position.
mitz
Comment 4
2007-01-05 12:13:15 PST
Created
attachment 12243
[details]
Fix table section repainting and table overflows
Dave Hyatt
Comment 5
2007-01-05 12:58:14 PST
Comment on
attachment 12243
[details]
Fix table section repainting and table overflows r=me
Adele Peterson
Comment 6
2007-01-05 15:20:29 PST
Committed revision 18634.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug