WebCore/rendering/RenderTableSection.h
@@ -80,6 +80,9 @@ public:
     void appendColumn(int pos);
     void splitColumn(int pos, int newSize);
 
+    virtual int overflowWidth(bool includeInterior = true) const { return (!includeInterior && hasOverflowClip()) ? m_width : m_overflowWidth; }
+    virtual int overflowLeft(bool includeInterior = true) const { return (!includeInterior && hasOverflowClip()) ? 0 : m_overflowLeft; }
+
     virtual int lowestPosition(bool includeOverflowInterior, bool includeSelf) const;
     virtual int rightmostPosition(bool includeOverflowInterior, bool includeSelf) const;
     virtual int leftmostPosition(bool includeOverflowInterior, bool includeSelf) const;
@@ -140,6 +143,9 @@ protected:
     int m_outerBorderRight;
     int m_outerBorderTop;
     int m_outerBorderBottom;
+    int m_overflowLeft;
+    int m_overflowWidth;
+    bool m_hasOverflowingCell;
 };
 
 } // namespace WebCore
